--- a/index.html
+++ b/index.html
@@ -19,5 +19,19 @@
             </ul>
         </div>
     </div>
+
+    <div class="hero">
+        <div class="hero-left">
+            <h1 class="hero-title">This website is awesome</h1>
+            <p class="hero-subtitle">This website has some subtext that goes here under the main title. 
+                It`s smaller font and the color is lower contrast</p>
+            <button class="hero-btn">Sign up</button>
+        </div>
+
+        <div class="hero-right">
+            <div class="image-placeholder"></div>
+        </div>
+    </div>
+
 </body>
 </html>
