--- a/index.html
+++ b/index.html
@@ -33,5 +33,27 @@
         </div>
     </div>
 
+    <div class="main">
+        <h2 class="info-title">Some Random Information</h2>
+        <div class="wrapper-container">
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="box"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
