Create quote container

--- a/index.html
+++ b/index.html
@@ -55,5 +55,10 @@
         </div>
     </div>
 
+    <div class="quote-container">
+        <p class="quote-text">Потом</p>
+        <p class="author"></p>
+    </div>
+
 </body>
 </html>
