--- a/index.html
+++ b/index.html
@@ -60,5 +60,12 @@
         <p class="author"></p>
     </div>
 
+    <div class="sign-up-container">
+        <div class="sign-up-box">
+            <h2 class="sign-up-title">Call to action! It`s time!</h2>
+            <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+    </div>
+
 </body>
 </html>
