Forget to edit button text 😅

--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         <div class="sign-up-box">
             <h2 class="sign-up-title">Call to action! It`s time!</h2>
             <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+
+            <button class="sign-up-btn">Sign up</button>
         </div>
     </div>
 
