--- a/index.html
+++ b/index.html
@@ -69,5 +69,9 @@
         </div>
     </div>
 
+    <div class="footer">
+        <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
+    </div>
+
 </body>
 </html>
