--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
     </div>
 
     <div class="quote-container">
-        <p class="quote-text">Потом</p>
-        <p class="author"></p>
+        <p class="quote-text">
+            If you get lost in the forest, go home.</p>
+        <p class="author">-Jason Statham</p>
     </div>
 
     <div class="sign-up-container">
