Edit mistake on img class name

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="hero-right">
-            <img class="her-img" src="https://cdn.pixabay.com/photo/2025/08/11/15/04/milky-way-9768540_1280.jpg" alt="space image">
+            <img class="hero-img" src="https://cdn.pixabay.com/photo/2025/08/11/15/04/milky-way-9768540_1280.jpg" alt="space image">
         </div>
     </div>
 
