--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 
     <div class="sign-up-container">
         <div class="sign-up-box">
-            <h2 class="sign-up-title">Call to action! It`s time!</h2>
-            <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
-
+            <div>
+                <h2 class="sign-up-title">Call to action! It`s time!</h2>
+                <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
             <button class="sign-up-btn">Sign up</button>
         </div>
     </div>
