--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="header">
+    <header class="header">
         <div class="navbar">
             <div class="header-logo">Logo</div>
 
@@ -22,7 +22,7 @@
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-    </div>
+    </header>
 
     <div class="hero">
         <div class="hero-left">
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <div class="main">
+    <main class="main">
         <h2 class="info-title">Some Random Information</h2>
         <div class="wrapper-container">
             <div class="card">
@@ -57,7 +57,7 @@
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
-    </div>
+    </main>
 
     <div class="quote-container">
         <p class="quote-text">
@@ -75,9 +75,9 @@
         </div>
     </div>
 
-    <div class="footer">
+    <footer class="footer">
         <p class="footer-text">Copyright &copy; The Odin Project 2021</p>
-    </div>
+    </footer>
 
 </body>
 </html>
